[package]
name = "titanium"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["http1"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
anyhow = "1.0"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
png = "0.17"
chromiumoxide = "0.9"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
